# starline

./: .env.example  .gitignore  CHANGEMENTS_TECHNIQUES.md  CICD.md  CLAUDE.md  CORRECTIONS_CORS_FR.md  CORS_SETUP.md  DOCKER_QUICKSTART.md  LISEZMOI.md  QUICKSTART.md  README.md  README_CORRECTIONS_FR.txt  RESUME_CORRECTIONS.md  SUPABASE_SETUP.md  analyze_french_influencers.py  docker-compose.yml  french_influencers_analysis.json  retry_failed_influencers.py  test-cors.ps1  test-cors.sh
.github/workflows/: publish-backend.yml  publish-frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  env.template  main.py  pyproject.toml  starline_backup_20251116_002304.sql
backend/.claude/: settings.local.json
backend/src/: main.py
backend/src/agents/: analyzer.py
backend/src/api/: routes.py
backend/src/config/: settings.py
backend/src/models/: database.py
backend/src/services/: blackbox_client.py  image_search.py  openfoodfacts.py  perplexity_client.py  profile_fetcher.py  supabase_client.py  supabase_db.py  wikipedia_image.py
docs/: CICD.md  COMMANDS.md
frontend/: .dockerignore  .env.example  CLAUDE.md  DESIGN_UPDATES.md  Dockerfile  GUIDELINES.md  IMPLEMENTATION_SUMMARY.md  README.md  SUPABASE_SETUP.md  env.template  ideas.md  index.html  nginx.conf  object.md  package-lock.json  package.json  struct.md  supabase-schema.sql  tailwind.config.ts  vite-plugin-react-grab.ts  vite.config.ts
frontend/.claude/: settings.local.json
frontend/src/: App.tsx  index.css  mockData.ts  types.ts  vite-env.d.ts
frontend/src/components/: AuthModal.css  (+43 more)
(+26 files in other folders)
